--- a/src/devtools/panel.html
+++ b/src/devtools/panel.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="devtools-root" class="h-screen w-full"></div>
-    <script src="../shared/theme-init.js"></script>
+    <script type="module" src="../shared/theme-init.js"></script>
     <script type="module" src="./panel.tsx"></script>
   </body>
 </html>
