--- a/src/options/index.html
+++ b/src/options/index.html
@@ -9,7 +9,7 @@
 
   <body class="extension-options">
     <div id="options-root"></div>
-    <script src="../shared/theme-init.js"></script>
+    <script type="module" src="../shared/theme-init.js"></script>
     <script type="module" src="main.tsx"></script>
   </body>
 </html>
